--- a/zengarden/style.scss
+++ b/zengarden/style.scss
@@ -34,13 +34,13 @@ html {
     margin: 0;
     padding: 0;
     @include MQ(S) {
-
+        margin: 0;
+        padding: 0;
+        &::after {
+            @include closeStars;
+        }
     }
-	&::after {
-		@include closeStars;
-	}
 }
-
 body {
     display: flex;
     font-family: $primary-font;
@@ -52,6 +52,7 @@ body {
     margin: 0;
     padding: 5px 10px 5px 10px;
     @include MQ(S) {
+        max-height: 3200px;
         padding: 0;
         font-family: $primary-font;
         font-size: 16px;
@@ -60,11 +61,11 @@ body {
         grid-gap: 0 25px;
         grid-template-columns: 1fr calc(60%) calc(20%) 1fr;
         grid-template-rows: 350px auto auto auto auto auto;
-        background-image: url("stars1.jpg");
+        background-image: url("stars.jpg");
         background-attachment: fixed;
         background-position: top;
-        background-repeat: repeat-y;
-        background-size: 100vw;
+        background-repeat: repeat-x;
+        background-size: auto;
         cursor: url('SVG/ufo.png'), auto;	
         &::before {
             visibility: visible;
@@ -188,7 +189,9 @@ abbr[title] {
             content: " ";
         }
 		&::before {
-			@include farStars;
+
+            @include farStars;
+            
 		}
     }
 }
